🔗 更新底部按钮链接
- 将底部按钮文案改为'使用说明'和'更新日志'

- 使用说明按钮跳转到GitHub README页面

- 更新日志按钮跳转到GitHub CHANGELOG页面

- 移除原有的设置和帮助按钮功能

--- a/popup.html
+++ b/popup.html
@@ -92,8 +92,8 @@
         </div>
         
         <div class="popup-footer">
-            <button id="open-settings" class="popup-btn">设置</button>
-            <button id="open-help" class="popup-btn">帮助</button>
+            <button id="open-usage" class="popup-btn">使用说明</button>
+            <button id="open-changelog" class="popup-btn">更新日志</button>
         </div>
     </div>
     
